@@ -23,42 +23,40 @@
  */
 
 #ifndef CVSID7
-#define CVSID7 "$Id: smartd.h,v 1.13 2002/10/29 16:59:02 ballen4705 Exp $\n"
+#define CVSID7 "$Id: smartd.h,v 1.14 2002/10/29 17:50:59 ballen4705 Exp $\n"
 #endif
 
 // Configuration file
 #define CONFIGFILE "/etc/smartd.conf"
+
+// maximum line length in configuration file
 #define MAXLINELEN 128
+
+// maximum number of device entries in configuration file.
 #define MAXENTRIES 64
+
+// maximum length of a continued line in configuration file
 #define MAXCONTLINE 511
-#define MAXDEVLEN 51
 
-/* how often SMART status is checked, in seconds */
-int checktime = 1800;
+// how often SMART status is checked, in seconds
+#define CHECKTIME 1800
 
-// number of ATA and SCSI devices being watched
-int numatadevices;
-int numscsidevices;
-
+// maximum number of ATA devices to monitor
 #define MAXATADEVICES	12
+
+// maximum number of SCSI devices to monitor
 #define MAXSCSIDEVICES	26
 
 /* Defines for command line options */ 
 #define DEBUGMODE 		'X'
-#define EMAILNOTIFICATION	'e'
 #define PRINTCOPYLEFT           'V'
 
 /* Boolean Values */
 #define TRUE 0x01
 #define FALSE 0x00
 
-/* Global Variables for command line options */
-// These should go into a structure at some point
-unsigned char debugmode               = FALSE;
-unsigned char emailnotification       = FALSE;
-unsigned char printcopyleft           = FALSE;
-
-
+// used to store a list of SCSI devices to monitor.  Devicename points
+// to a malloced name string.
 typedef struct scsidevices_s {
   unsigned char SmartPageSupported;
   unsigned char TempPageSupported;
@@ -67,13 +65,14 @@ typedef struct scsidevices_s {
 } scsidevices_t;
 
 
+// Used to store a list of devices and options that were in the
+// configuration file.
 typedef struct configfile_s {
   // which line was entry in file; what device type and name?
   int lineno;
   char tryata;
   char tryscsi;
   char *name;
-
   // which tests have been enabled?
   char smartcheck;
   char usagefailed;
@@ -81,13 +80,12 @@ typedef struct configfile_s {
   char usage;
   char selftest;
   char errorlog;
-
-  // store counts of ata and self-test errors
+  // counts of ata and self-test errors.  Perhaps ought to be in the
+  // atadevices_t structure.
   char selflogcount;
   int  ataerrorcount;
-  // following two items point to 32 bytes, in the form of are
+  // following two items point to 32 bytes, in the form of
   // 32x8=256 single bit flags 
-
   // valid attribute numbers are from 1 <= x <= 255
   // valid attribute values  are from 1 <= x <= 254
   unsigned char *failatt;
@@ -95,6 +93,7 @@ typedef struct configfile_s {
 } cfgfile;
 
 
+// Used to store list of ATA devices to monitor.
 typedef struct atadevices_s {
   struct ata_smart_values *smartval;
   struct ata_smart_thresholds *smartthres;
