@@ -1,6 +1,6 @@
 CHANGELOG for smartmontools
 
-$Id: CHANGELOG,v 1.28 2002/10/29 15:19:30 ballen4705 Exp $
+$Id: CHANGELOG,v 1.29 2002/10/29 17:50:58 ballen4705 Exp $
 
 Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 
@@ -25,6 +25,16 @@ NOTES FOR FUTURE RELEASES: see TODO file.
 
 
 CURRENT RELEASE (see VERSION file in this directory):
+
+smartmontools-5.0.VERSION
+
+    Eliminated some global variables out of header files and other
+    minor cleanup of smartd.
+
+smartmontools-5.0.20
+
+    Did some revision of the man page for smartd and made the usage
+    messages for Directives 100% consistent.
 
 smartmontools-5.0-19
 
